src/styles/pages/Cities/Cities.scss
@use '../../../sass/variables' as v;
@forward '../../../sass/templates';

//Main wrapper
.cities_wrapper {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-top: 4rem;
  margin-bottom: 8rem;
  position: relative;

  .title_wrapper {
    width: 100%;
    .cities_title {
      display: flex;
      text-align: left;
      margin-bottom: 2rem;
      padding-left: 6vw;
    }
  }

  //Input wrapper
  .cities_input_wrapper {
    display: flex;
    flex-direction: column;
    position: relative;
    width: 100%;
    align-items: center;

    //Cities input container
    .cities_input_container {
      display: flex;
      justify-content: space-around;
      align-items: center;
      margin-bottom: 0.2rem;
      width: 100%;

      .cities_input_field {
        width: 70%;
        height: 3rem;
        font-size: v.$font_size_lg;
        border-radius: 1rem;
        background-color: v.$color_dark_blue_hover;
        color: v.$color_white;
        // font-weight: v.$font_weight_bold;
        border: none;
        outline: none;
        padding-left: 0.4rem;
      }

      .cities_search_btn {
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 50%;
        height: 50px;
        width: 50px;
        padding: 0.4rem;
        background-color: v.$color_dark_blue_hover;
        border: none;

        &:hover {
          color: v.$color_dark_blue_hover;
          background-color: v.$color_white;
          cursor: pointer;
        }
        .cities_search_btn_icon {
          font-size: v.$font_size_xl;
        }
      }
    }

    .cities_alert_wrapper {
      display: flex;
      flex-direction: column;
      position: relative;
      width: 100%;
      align-items: center;

      //Cities alert box
      .cities_alert_container {
        width: 100%;
        text-align: left;
        margin-bottom: 4rem;
        position: relative;

        .search_for_cities {
          color: v.$color_grey;
          padding-left: 6%;
        }

        .not_found {
          color: v.$color_red;
          padding-left: 6%;
        }

        .placeholder {
          height: 21px;
        }
      }
    }
  }

  //Cities list component
  .cities_list_container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    width: 100%;

    .cities_list_wrapper {
      display: flex;
      justify-content: space-around;
      height: 4rem;
      margin-left: 1.5rem;
      margin-right: 1.5rem;
      border-radius: 1rem;
      width: 100%;

      .cities_list_element {
        display: flex;
        justify-content: flex-start;
        align-items: center;
        padding-left: 0.5rem;
        width: 70%;
        background-color: v.$color_dark_blue_hover;
        border-radius: 1rem;
        font-size: v.$font_size_xxxl;

        &:hover {
          background-color: v.$color_dark_blue;
          cursor: pointer;
        }
      }

      .cities_list_element_btn {
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 0.8rem;
        height: 100%;
        width: 50px;
        padding: 0.4rem;
        background-color: v.$color_red;
        border: none;

        &:hover {
          color: v.$color_white;
          cursor: pointer;
        }

        .list_element_icon {
          font-size: v.$font_size_4xl;
        }
      }
    }
  }
}

//Media Queries

@media only screen and (min-width: 768px) {
  .cities_input_container,
  .cities_alert_container {
    max-width: 1400px !important;
    .search_for_cities,
    .not_found {
      padding-left: 7% !important;
    }
  }

  .cities_list_wrapper {
    max-width: 1400px !important;
  }
}

